# WRTR

./: CMakeLists.txt  README.md  run.sh
data/: data.xls
src/: Ocr.cpp  getCh.cpp  getPic.cpp  main.cpp
